--- a/main.tex
+++ b/main.tex
@@ -88,30 +88,13 @@
 }
 
 
-\newcommand{\resumeEducationHeading}[6]{
+\newcommand{\resumeEducationHeading}[4]{
   \vspace{-2pt}\item
     \begin{tabular*}{0.97\textwidth}[t]{l@{\extracolsep{\fill}}r}
       \textbf{#1} & #2 \\
-      \textit{\small#3} & \textit{\small #4} \\
-      \textit{\small#5} & \textit{\small #6} \\
+      \textit{\small#3} \\
+      {\small#4}\\
     \end{tabular*}\vspace{-5pt}
-}
-
-
-\newcommand{\resumeProjectHeading}[2]{
-    \vspace{-2pt}\item
-    \begin{tabular*}{0.97\textwidth}{l@{\extracolsep{\fill}}r}
-      \small#1 & #2 \\
-    \end{tabular*}\vspace{-7pt}
-}
-
-
-\newcommand{\resumeOrganizationHeading}[4]{
-  \vspace{-2pt}\item
-    \begin{tabular*}{0.97\textwidth}[t]{l@{\extracolsep{\fill}}r}
-      \textbf{#1} & \textit{\small #2} \\
-      \textit{\small#3}
-    \end{tabular*}\vspace{-7pt}
 }
 
 \newcommand{\resumeSubItem}[1]{\resumeItem{#1}\vspace{-4pt}}
@@ -123,6 +106,17 @@
 \newcommand{\resumeItemListStart}{\begin{itemize}}
 \newcommand{\resumeItemListEnd}{\end{itemize}\vspace{-5pt}}
 
+\newcommand{\resumeWorkExStart}[3]{
+  \begin{itemize}[leftmargin=0.15in, label={}]%
+  \item \begin{tabular*}{0.97\textwidth}[t]{l@{\extracolsep{\fill}}r}%
+    \textbf{#1} & \textit{\small{#2}}%
+  \end{tabular*}%
+  \vspace{-3pt}\item \textit{#3}%
+  % \vspace{-3pt}\item \textbf{Responsibilities:}%
+  \begin{itemize}%
+}
+\newcommand{\resumeWorkExEnd}{\end{itemize}\end{itemize}}
+
 %-------------------------------------------
 %%%%%%  RESUME STARTS HERE  %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -132,22 +126,84 @@
 %---------- HEADING ----------
 
 \begin{center}
-    \textbf{\Huge \scshape Aras Güngöre} \\ \vspace{3pt}
+    \textbf{\Huge \scshape Nguyen Van Tuong} \\ \vspace{10pt}
     \small
-    \faMobile \hspace{.5pt} \href{tel:905314204536}{+90 531 420 4536}
+    \faMobile \hspace{.5pt} \href{tel:84824967943}{+84 824 967 943}
     $|$
-    \faAt \hspace{.5pt} \href{mailto:arasgungore09@gmail.com}{arasgungore09@gmail.com}
+    \faAt \hspace{.5pt} \href{mailto:tuongnv99@gmail.com}{tuongnv99@gmail.com}
     $|$
-    \faLinkedinSquare \hspace{.5pt} \href{https://www.linkedin.com/in/arasgungore}{LinkedIn}
+    \faLinkedinSquare \hspace{.5pt} \href{https://www.linkedin.com/in/tuongnv}{LinkedIn}
     $|$
-    \faGithub \hspace{.5pt} \href{https://github.com/arasgungore}{GitHub}
+    \faGithub \hspace{.5pt} \href{https://github.com/tuongnv99}{GitHub}
     $|$
-    \faGlobe \hspace{.5pt} \href{https://arasgungore.github.io}{Portfolio}
-    $|$
-    \faMapMarker \hspace{.5pt} \href{https://www.google.com/maps/place/Bogazici+University+North+Campus/@41.0863067,29.0441352,15z/data=!4m5!3m4!1s0x0:0x9d2497b07c8edb2f!8m2!3d41.0863067!4d29.0441352}{Istanbul, Turkey}
+    \faMapMarker \hspace{.5pt} \href{https://maps.app.goo.gl/7cBHvJBrCku3NF1v7}{Me Tri, Hanoi}
 \end{center}
 
 
+
+%----------- SUMMARY -----------
+\section{Summary}
+  \vspace{2pt}
+  \resumeSubHeadingListStart
+    \small{\item{
+        \hspace{10pt}
+        { Results-driven Backend Developer with 3+ years of experience in developing and deploying web applications, databases, and APIs. Expert in designing, optimizing, and troubleshooting backend systems to ensure maximum performance and reliability. Adept at creating secure, scalable, and efficient code.}
+    }}
+  \resumeSubHeadingListEnd
+
+
+
+%----------- SKILLS -----------
+\section{Skills}
+  \vspace{3pt}
+  \small
+    \begin{minipage}[t]{0.5\textwidth}
+    \begin{enumerate}[label=•]
+      \item \textbf{Programming Languages:}
+      \begin{itemize}[label=-, topsep=-1.5pt]
+        \item PHP, JavaScript, Java
+        \item HTML5, CSS3
+      \end{itemize}
+      \item \textbf{Database Management Systems:}
+      \begin{itemize}[label=-, topsep=-1.5pt]
+        \item MySQL, PostgreSQL
+        \item MongoDB, Redis
+      \end{itemize}
+      \item \textbf{Soft Skills:}
+      \begin{itemize}[label=-, topsep=-1.5pt]
+        \item Problem-solving, communication
+        \item Continuous learning, adaptability
+      \end{itemize}
+    \end{enumerate}
+    \end{minipage}%
+    \hfill
+    \begin{minipage}[t]{0.5\textwidth}
+    \begin{enumerate}[label=•]
+      \item \textbf{Frameworks/Platforms:}
+      \begin{itemize}[label=-, topsep=-1.5pt]
+        \item Magento, Laravel
+        \item Serverless Lambda AWS
+        \item Spring Boot
+        \item jQuery, Bootstrap
+      \end{itemize}
+      \item \textbf{DevOps Tools:}
+      \begin{itemize}[label=-, topsep=-1.5pt]
+        \item Manage Version Control with Git
+        \item Containerization with Docker
+        \item CI/CD Pipelines with Jenkins, GitLab CI/CD
+      \end{itemize}
+    \end{enumerate}
+    \end{minipage}%
+
+    \begin{enumerate}[label=•]
+      \item \textbf{Other:}
+      \begin{itemize}[label=-, topsep=-1.5pt]
+        \item Understanding web app security, including authentication and authorization.
+        \item Implementing caching for database and application performance.
+        \item Writing unit tests and debugging for code reliability.
+        \item Deployment and management using cloud platforms (AWS) and Kubernetes
+      \end{itemize}
+    \end{enumerate}
 
 %----------- EDUCATION -----------
 
@@ -156,242 +212,26 @@
   \resumeSubHeadingListStart
     
     \resumeEducationHeading
-      {Boğaziçi University
-      % \normalfont{(Admission rate: 0.09\%)}
-      }{Istanbul, Turkey}
-      {B.Sc. in Electrical and Electronics Engineering;   \textbf{GPA: 3.62/4.00}}{Sep 2018 \textbf{--} Jun 2023}
-      {Minor Degree in Computer Engineering;
-      \textbf{GPA: 3.58/4.00}}{Oct 2020 \textbf{--} Jun 2023}
-        % \resumeItemListStart
-            % \resumeItem{\textbf{Relevant coursework:} Materials Science, Electrical Circuits I-II, Digital System Design, Numerical Methods, Probability Theory, Electronics I-II, Signals and Systems, Electromagnetic Field Theory, Energy Conversion, System Dynamics and Control, Communication Engineering, Pattern Recognition, Introduction to Digital Signal Processing, Introduction to Digital Communications, Introduction to Database Systems, Introduction to Image Processing, Machine Vision}
-        % \resumeItemListEnd
-    
-    % \resumeSubheading
-      % {Kocaeli Science High School
-      % \normalfont{(Admission rate: 0.85\%)}
-      % }{Kocaeli, Turkey}
-      % {High School Diploma;   \textbf{GPA: 97.03/100}}{Sep 2014 \textbf{--} Jun 2018}
-    
+      {Hanoi University of Industry}
+      {Compeleted in 2020}
+      {Software Engineering}
+      {Bachelor's Degree of Engineer}
   \resumeSubHeadingListEnd
 
 
 
-%----------- SKILLS -----------
-
-\section{Skills}
-  \vspace{2pt}
-  \resumeSubHeadingListStart
-    \small{\item{
-        
-        \textbf{Languages:}{ C/C++, C\#, Java, Python, Go, JavaScript, SQL, Scala, MATLAB, R} \\ \vspace{3pt}
-        
-        \textbf{Technologies:}{ Django, Node.js, React.js, MySQL, MongoDB, Git, Docker, Amazon Web Services, Unity, Linux, \\ \hspace{67.5pt} Robot Operating System} \\ \vspace{3pt}
-        
-        \textbf{Libraries:}{ OpenCV, Scikit-Learn, PyTorch, Keras, TensorFlow, NumPy, Pandas, Matplotlib, Seaborn} \\ \vspace{3pt}
-        
-    }}
-  \resumeSubHeadingListEnd
-
-
-
-%----------- WORK EXPERIENCE -----------
-
+%----------- WORK	EXPERIENCE -----------
 \section{Work Experience}
-  \vspace{3pt}
-  \resumeSubHeadingListStart
+  \resumeWorkExStart{Mageplaza Co., Ltd}{01/2021 - 03/2022}{Magento Developer}
+    \resumeItem{Understanding project and client requirements, followed by writing code to develop features and customize interfaces.}
+    \resumeItem{Maintenance products and provide ongoing assistance to global customers.}
+    \resumeItem{To ensure the website runs smoothly and quickly, thorough testing is conducted to identify and fix any issues.}
+  \resumeWorkExEnd
 
-    \resumeSubheading
-      {SemperTech}{Istanbul, Turkey}
-      {Software Engineer}{Sep 2023 \textbf{--} Present, Full-time}
-        \resumeItemListStart
-            \resumeItem{Currently working on the “Arçelik Digital Home Energy” project in a collaborative effort with DAI-Labor at the Technical University of Berlin under the supervision of \href{https://www.linkedin.com/in/prof-dr-dr-h-c-sahin-albayrak-65452a1/}{\color{blue}Prof. Dr. Şahin Albayrak}.}
-            \resumeItem{Simulated data exchange processes with the EEBUS protocol suite using C\# and Go frameworks. Migrated the entire framework from Go to C++ in order to ensure future adaptability for smart home IoT devices.}
-        \resumeItemListEnd
+  \resumeWorkExStart{Rikkeisoft Co., Ltd}{04/2022 - Present}{Backend Developer}
+    \resumeItem{Understanding project requirements and client needs is the initial step, followed by writing code to develop features and customize interfaces.}
+    \resumeItem{Maintenance products and provide ongoing assistance to global customers.}
+    \resumeItem{To ensure the website runs smoothly and quickly, thorough testing is conducted to identify and fix any issues.}
+  \resumeWorkExEnd
 
-    \resumeSubheading
-      {Scale AI}{San Francisco, California, United States (Remote)}
-      {Prompt Engineer}{Jul 2023 \textbf{--} Sep 2023, Freelance}
-        \resumeItemListStart
-            \resumeItem{Developed effective Turkish prompts for diverse AI tasks and maintained a high standard of prompt quality and consistency across different competencies, adhering to established guidelines and best practices.}
-            % \resumeItem{Reviewed, validated, and scored the AI assistant's responses to ensure they align with intended AI assistant behaviors and the AI assistant produces accurate and contextually appropriate responses to given prompts.}
-            \resumeItem{Engaged in collaborative meetings with cross-functional teams and project coordinators, actively seeking guidance, addressing queries, and collectively brainstorming strategies to generate higher quality prompts.}
-        \resumeItemListEnd
-    
-    \resumeSubheading
-      {SESTEK Speech Enabled Software Technologies}{Istanbul, Turkey}
-      {AI Research and Development Intern}{Jan 2022 \textbf{--} Feb 2022, Internship}
-        \resumeItemListStart
-            \resumeItem{Implemented various NLP tasks, including NER, POS tagging, sentiment analysis, text classification, and extractive/generative QA using transformers and Hugging Face libraries. Conducted a literature review on information retrieval and reading comprehension to stay updated on the state-of-the-art ML models.}
-            \resumeItem{Developed a generative question answering system with Dense Passage Retrieval and Retrieval-Augmented Generation techniques using the Haystack framework on Python.}
-            \resumeItem{Worked on a Turkish open-domain question answering system by fine-tuning a BERT base model transformer with PyTorch. Evaluated exact match and F1 scores using different Turkish data sets and DeepMind's XQuAD data set and then tabularized the evaluation results.}
-        \resumeItemListEnd
-    
-    % \resumeSubheading
-      % {Ankara Metropolitan Municipality}{Ankara, Turkey}
-      % {SCADA Engineering Intern}{Aug 2021 \textbf{--} Sep 2021, Internship}
-        % \resumeItemListStart
-            % \resumeItem{Designed GSM/GPRS-based electrical control panels that are connected to local water pump automation systems. Pump station panels use digital output data received from the SCADA control center via RF transmission to control valves and pumps. Tank station panels are charged from the PV system and refill water tanks by signaling the pump station panel when the float switch is activated.}
-            % \resumeItem{Implemented motor control circuits by reading their PLC ladder diagrams and analyzed the EPLAN project documentation, HMI, and hardware components of an RTU panel.}
-        % \resumeItemListEnd
-
-    % \vspace{15pt}
-    % \resumeSubheading
-      % {Meteksan Defense Industry Inc.}{Ankara, Turkey}
-      % {Analog Design Engineering Intern}{Jul 2021 \textbf{--} Aug 2021, Internship}
-        % \resumeItemListStart
-            % \resumeItem{Designed and simulated numerous analog circuits such as voltage-mode controlled buck converter, phase-shifted full-bridge isolated DC-DC converter, and EMI filters with LTspice. Integrated these circuits and implemented a 320 W power distribution unit to be used in a radar system's power circuit board.}
-            % \resumeItem{Researched real-world compatible electronic components to be used in such circuits including GaNFETs, high-side gate drivers, and Schottky diodes.}
-            % \resumeItem{Assembled PCBs of both common and differential mode filters and used VNA Bode 100 to measure the cut-off frequencies.}
-        % \resumeItemListEnd
-    
-  \resumeSubHeadingListEnd
-
-
-
-%----------- RESEARCH EXPERIENCE -----------
-
-\section{Research Experience}
-  \vspace{3pt}
-  \resumeSubHeadingListStart
-  
-    \resumeSubheading
-      {Max Planck Institute for Intelligent Systems}{Stuttgart, Baden\textbf{-}Württemberg, Germany}
-      {Undergraduate Researcher}{Jun 2022 \textbf{--} Aug 2022, Internship}
-        \resumeItemListStart
-            \resumeItem{Worked in the Robotics, Collectives and Learning subgroup at the Physical Intelligence Department with former Ph.D. students \href{https://www.linkedin.com/in/sinan-ozgun-demir-981311129/}{\color{blue}Sinan Özgün Demir} and \href{https://www.linkedin.com/in/alpkaracakol/}{\color{blue}Alp Can Karacakol} on a project about 3D printing and heat-assisted magnetic programming of soft machines under the supervision of \href{https://www.linkedin.com/in/metin-sitti-0a8a712/}{\color{blue}Prof. Dr. Metin Sitti}.}
-            \resumeItem{Updated a ROS package for converting 3D motion controller events to ROS messages so that it synchronously operates at any given loop rate with C++.}
-            \resumeItem{Implemented an Arduino Mega driver for controlling a fluid dispenser, a laser, thermocouples, and a coil set. Updated ROS nodes for parsing G-codes and controlling stage movement and built the ROS-Arduino communication network to simulate a 3D printing and magnetic programming process with Python.}
-            \resumeItem{Designed the project's system and software architecture, algorithm flowchart, and state machine diagram. Implemented and debugged ROS nodes by validating each corresponding hardware component functions correctly.}
-        \resumeItemListEnd
-    
-    \vspace{14pt}
-    
-    \resumeSubheading
-      {Nanonetworking Research Group, Boğaziçi University}{Istanbul, Turkey}
-      {Undergraduate Researcher}{Oct 2021 \textbf{--} Jun 2022, Part-time}
-        \resumeItemListStart
-            \resumeItem{Worked on the project “Design and Implementation of Molecular Communication Systems Using Index Modulation” under the supervision of \href{https://www.linkedin.com/in/alipusane/}{\color{blue}Prof. Dr. Ali Emre Pusane}.}
-            \resumeItem{Simulated the Brownian motion of molecules in a SISO MCvD system and predicted simulation parameters such as receiver radius, diffusion coefficient, and transmitter-receiver distance using CNNs with Keras and TensorFlow.}
-            \resumeItem{Plotted the arrival of molecules per symbol duration in a SISO MCvD system using Binomial, Poisson, and Gaussian model approximations with MATLAB.}
-            \resumeItem{Ran Monte Carlo simulations of the Gaussian model to encode/decode randomized binary sequences in a SISO MCvD system using BCSK modulation technique and calculated the bit error rate on Z-channel.}
-        \resumeItemListEnd
-    
-  \resumeSubHeadingListEnd
-
-
-
-%----------- AWARDS & ACHIEVEMENTS -----------
-
-\section{Awards \& Achievements}
-  \vspace{2pt}
-  \resumeSubHeadingListStart
-    \small{\item{
-        \textbf{High Honors Degree:}{ Awarded to Bachelor alumni who have graduated with a GPA greater than or equal to 3.50 by Boğaziçi University. (Jul 2023)} \\ \vspace{3pt}
-
-        \textbf{TÜBİTAK 2247-C Intern Researcher Scholarship:}{ Awarded to undergraduate students who take part in research projects carried out by the Scientific and Technological Research Council of Turkey (TÜBİTAK). (Dec 2021 \textbf{--} Jun 2022)} \\ \vspace{3pt}
-    
-        \textbf{National University Admission Exam (YKS):}{ Ranked $75^{th}$ in Mathematics and Science among ca. 2.3 million candidates with a test score of 489.92/500. (Jul 2018)} \\ \vspace{3pt}
-        
-        \textbf{KYK Outstanding Success Scholarship:}{ Awarded to undergraduate students who have been ranked in the top 100 on National University Admission Exam by Higher Education Credit and Hostels Institution (KYK). (Sep 2018 \textbf{--} Jun 2023)} \\ \vspace{3pt}
-        
-        % \textbf{Boğaziçi University Success Scholarship:}{ Awarded to undergraduate students who have been ranked in the top 100 on National University Admission Exam by Boğaziçi University. (Sep 2018 \textbf{--} Jun 2023)} \\ \vspace{3pt}
-        
-        % \textbf{Duolingo English Test (DET):}{ Overall Score: 135/160} \\ \vspace{3pt}
-        
-        % \textbf{Boğaziçi University English Proficiency Test (BUEPT):}{ Achieved the highest grade A on the BUEPT grading scheme with a total score in the range of 85-100.} \\ \vspace{3pt}
-        
-        % \textbf{Kocaeli Science High School Salutatorian Award:}{ Graduated as the second-highest ranked student in my class.}
-    }}
-  \resumeSubHeadingListEnd
-
-
-
-%----------- PROJECTS -----------
-
-% \section{Projects}
-    % \vspace{3pt}
-    % \resumeSubHeadingListStart
-      
-      % \resumeProjectHeading
-        % {\textbf{Filters and Fractals} $|$ \emph{\href{https://github.com/arasgungore/filters-and-fractals}{\color{blue}GitHub}}}{}
-          % \resumeItemListStart
-            % \resumeItem{A C project which implements a variety of image processing operations that manipulate the size, filter, brightness, contrast, saturation, and other properties of PPM images from scratch.}
-            % \resumeItem{Added recursive fractal generation functions to model popular fractals including Mandelbrot set, Julia set, Koch curve, Barnsley fern, and Sierpinski triangle in PPM format.}
-          % \resumeItemListEnd
-      
-      % \resumeProjectHeading
-        % {\textbf{Chess Bot} $|$ \emph{\href{https://github.com/arasgungore/chess-bot}{\color{blue}GitHub}}}{}
-          % \resumeItemListStart
-            % \resumeItem{A C++ project in which you can play chess against an AI with a specified decision tree depth that uses alpha-beta pruning algorithm to predict the optimal move.}
-            % \resumeItem{Aside from basic moves, this mini chess engine also implements chess rules such as castling, en passant, fifty-move rule, threefold repetition, and pawn promotion.}
-          % \resumeItemListEnd
-      
-      % \resumeProjectHeading
-        % {\textbf{CMPE 250 Projects} $|$ \emph{\href{https://github.com/arasgungore/CMPE250-projects}{\color{blue}GitHub}}}{}
-          % \resumeItemListStart
-            % \resumeItem{Five Java projects assigned for the Data Structures and Algorithms (CMPE 250) course in the Fall 2021-22 semester.}
-            % \resumeItem{These projects apply DS\&A concepts such as discrete-event simulation (DES) using priority queues, Dijkstra's shortest path algorithm, Prim's algorithm to find the minimum spanning tree (MST), Dinic's algorithm for maximum flow problems, and weighted job scheduling with dynamic programming to real-world problems.}
-          % \resumeItemListEnd
-      
-    % \resumeSubHeadingListEnd
-
-
-
-%----------- RELEVANT COURSEWORK -----------
-
-% \section{Relevant Coursework}
-  % \vspace{2pt}
-  % \resumeSubHeadingListStart
-    % \small{\item{
-        % \textbf{Major coursework:}{ Materials Science, Electrical Circuits I-II, Digital System Design, Numerical Methods, Probability Theory, Electronics I-II, Signals and Systems, Electromagnetic Field Theory, Energy Conversion, System Dynamics and Control, Communication Engineering, Pattern Recognition, Introduction to Digital Signal Processing, Introduction to Digital Communications, Introduction to Database Systems, Introduction to Image Processing, Machine Vision} \\ \vspace{3pt}
-        
-        % \textbf{Minor coursework:}{ Discrete Computational Structures, Introduction to Object-Oriented Programming, Data Structures and Algorithms, Computer Organization, Fundamentals of Software Engineering}
-    % }}
-  % \resumeSubHeadingListEnd
-
-
-
-%----------- CERTIFICATES -----------
-
-% \section{Certificates}
-  % \resumeSubHeadingListStart
-    
-    % \resumeOrganizationHeading
-      % {Procter \& Gamble VIA Certificate Program}{Feb 2022}{Business Skills, Data and Digital Skills, Project Management and Personal Productivity}
-    
-  % \resumeSubHeadingListEnd
-
-
-
-%----------- ORGANIZATIONS -----------
-
-% \section{Organizations}
-  % \resumeSubHeadingListStart
-    
-    % \resumeOrganizationHeading
-      % {Institute of Electrical and Electronics Engineers (IEEE)}{Feb 2022 -- Present}{Student Member}
-    
-  % \resumeSubHeadingListEnd
-
-
-
-%----------- HOBBIES -----------
-
-% \section{Hobbies}
-  % \resumeSubHeadingListStart
-    % \small{\item{Swimming, Fitness, Eight-ball}}
-  % \resumeSubHeadingListEnd
-
-
-
-%----------- REFERENCES -----------
-
-% \section{References}
-  % \resumeSubHeadingListStart
-    
-  % \resumeSubHeadingListEnd
-
-
-
-%-------------------------------------------
 \end{document}
