--- a/main.tex
+++ b/main.tex
@@ -147,63 +147,26 @@
   \resumeSubHeadingListStart
     \small{\item{
         \hspace{10pt}
-        { Results-driven Backend Developer with 3+ years of experience in developing and deploying web applications, databases, and APIs. Expert in designing, optimizing, and troubleshooting backend systems to ensure maximum performance and reliability. Adept at creating secure, scalable, and efficient code.}
+        { Experienced backend developer with over three years of expertise in building scalable and efficient applications. Proficient in Node.js, PHP, and some Java, with a strong foundation in RESTful API development, database design, and CI/CD pipelines. Skilled in containerized environments (Docker) and experienced with cloud infrastructure for scalable and secure deployments. Adept at leading teams, ensuring smooth collaboration, and driving projects from planning to deployment. Passionate about optimizing system performance and delivering robust, high-quality solutions.}
     }}
   \resumeSubHeadingListEnd
 
 
 
 %----------- SKILLS -----------
-\section{Skills}
-  \vspace{3pt}
-  \small
-    \begin{minipage}[t]{0.5\textwidth}
-    \begin{enumerate}[label=•]
-      \item \textbf{Programming Languages:}
-      \begin{itemize}[label=-, topsep=-1.5pt]
-        \item PHP, JavaScript, Java
-        \item HTML5, CSS3
-      \end{itemize}
-      \item \textbf{Database Management Systems:}
-      \begin{itemize}[label=-, topsep=-1.5pt]
-        \item MySQL, PostgreSQL
-        \item MongoDB, Redis
-      \end{itemize}
-      \item \textbf{Soft Skills:}
-      \begin{itemize}[label=-, topsep=-1.5pt]
-        \item Problem-solving, communication
-        \item Continuous learning, adaptability
-      \end{itemize}
-    \end{enumerate}
-    \end{minipage}%
-    \hfill
-    \begin{minipage}[t]{0.5\textwidth}
-    \begin{enumerate}[label=•]
-      \item \textbf{Frameworks/Platforms:}
-      \begin{itemize}[label=-, topsep=-1.5pt]
-        \item Magento, Laravel
-        \item Serverless Lambda AWS
-        \item Spring Boot
-        \item jQuery, Bootstrap
-      \end{itemize}
-      \item \textbf{DevOps Tools:}
-      \begin{itemize}[label=-, topsep=-1.5pt]
-        \item Manage Version Control with Git
-        \item Containerization with Docker
-        \item CI/CD Pipelines with Jenkins, GitLab CI/CD
-      \end{itemize}
-    \end{enumerate}
-    \end{minipage}%
-
-    \begin{enumerate}[label=•]
-      \item \textbf{Other:}
-      \begin{itemize}[label=-, topsep=-1.5pt]
-        \item Understanding web app security, including authentication and authorization.
-        \item Implementing caching for database and application performance.
-        \item Writing unit tests and debugging for code reliability.
-        \item Deployment and management using cloud platforms (AWS) and Kubernetes
-      \end{itemize}
-    \end{enumerate}
+\section{Technical Skills}
+\vspace{3pt}
+\small
+\begin{multicols}
+    \begin{itemize}
+        \item \textbf{Languages:} Node.js, PHP, basic Java  
+        \item \textbf{Databases:} MySQL, PostgreSQL, MongoDB  
+        \item \textbf{Backend/API:} RESTful APIs, Microservices, Express.js, NestJS, Laravel  
+        \item \textbf{Cloud/DevOps:} Git, Docker, CI/CD (GitLab, Jenkins), basic cloud knowledge  
+        \item \textbf{Security/Performance:} Auth, DB optimization, caching, unit testing  
+        \item \textbf{Leadership:} Team management, mentorship, problem-solving, collaboration  
+    \end{itemize}
+\end{multicols}
 
 %----------- EDUCATION -----------
 
@@ -222,16 +185,26 @@
 
 %----------- WORK	EXPERIENCE -----------
 \section{Work Experience}
-  \resumeWorkExStart{Mageplaza Co., Ltd}{01/2021 - 03/2022}{Magento Developer}
-    \resumeItem{Understanding project and client requirements, followed by writing code to develop features and customize interfaces.}
-    \resumeItem{Maintenance products and provide ongoing assistance to global customers.}
-    \resumeItem{To ensure the website runs smoothly and quickly, thorough testing is conducted to identify and fix any issues.}
-  \resumeWorkExEnd
+  \vspace{3pt}
+  \resumeSubHeadingListStart
 
-  \resumeWorkExStart{Rikkeisoft Co., Ltd}{04/2022 - Present}{Backend Developer}
-    \resumeItem{Understanding project requirements and client needs is the initial step, followed by writing code to develop features and customize interfaces.}
-    \resumeItem{Maintenance products and provide ongoing assistance to global customers.}
-    \resumeItem{To ensure the website runs smoothly and quickly, thorough testing is conducted to identify and fix any issues.}
-  \resumeWorkExEnd
+    \resumeSubheading
+      {Rikkeisoft Co., Ltd}{Me Tri, Hanoi}
+      {Backend Developer / Team Lead}{Apr 2022 \textbf{--} Present, Full-time}
+        \resumeItemListStart
+            \resumeItem{Currently working on the “Arçelik Digital Home Energy” project in a collaborative effort with DAI-Labor at the Technical University of Berlin under the supervision of Prof. Dr. Şahin Albayrak.}
+            \resumeItem{Simulated data exchange processes with the EEBUS protocol suite using C\# and Go frameworks. Migrated the entire framework from Go to C++ in order to ensure future adaptability for smart home IoT devices.}
+        \resumeItemListEnd
+
+    \resumeSubheading
+      {Mageplaza Co., Ltd}{Ha Dong, Hanoi}
+      {Magento Developer}{Jan 2021 \textbf{--} Mar 2022, Full-time}
+        \resumeItemListStart
+            \resumeItem{Analyzed project and client requirements to develop new features and customize Magento interfaces.}
+            \resumeItem{Maintained and optimized products while providing technical support to global customers.}
+            \resumeItem{Conducted thorough testing and debugging to ensure high performance, stability, and seamless user experience.}
+        \resumeItemListEnd
+
+  \resumeSubHeadingListEnd
 
 \end{document}
