--- a/NguyenVanTuong_CV_EN.tex
+++ b/NguyenVanTuong_CV_EN.tex
@@ -51,7 +51,7 @@
 %-------------------------------------------------------------------------------
 % Available options: circle|rectangle,edge/noedge,left/right
 % \photo[rectangle,edge,right]{./examples/profile}
-\name{Nguyen}{Tuong}
+\name{Nguyen Van}{Tuong}
 \position{Backend Developer{\enskip\cdotp\enskip}Team Lead}
 \address{14/14 Me Tri Ha, Nam Tu Liem, Ha Noi}
 
