create VN language structure

--- a/NguyenVanTuong_CV_VN.tex
+++ b/NguyenVanTuong_CV_VN.tex
@@ -51,13 +51,13 @@
 %-------------------------------------------------------------------------------
 % Available options: circle|rectangle,edge/noedge,left/right
 % \photo[rectangle,edge,right]{./examples/profile}
-\name{Nguyen Van}{Tuong}
+\name{Nguyễn Văn}{Tường}
 \position{Backend Developer{\enskip\cdotp\enskip}Team Lead}
-\address{14/14 Me Tri Ha, Nam Tu Liem, Ha Noi}
+\address{14/14 Mễ Trì Hạ, Nam Từ Liêm, Hà Nội}
 
 \mobile{(+84) 824-967-943}
 \email{tuongnv99@gmail.com}
-\dateofbirth{July 17th, 1999}
+\dateofbirth{17/07/1999}
 % \homepage{www.posquit0.com}
 % \github{tuongnv}
 \linkedin{tuongnv}
@@ -97,11 +97,11 @@
 %	CV/RESUME CONTENT
 %	Each section is imported separately, open each file in turn to modify content
 %-------------------------------------------------------------------------------
-\input{resume/summary.tex}
-\input{resume/skills.tex}
-\input{resume/education.tex}
-\input{resume/experience.tex}
-\input{resume/whyme.tex}
+\input{resume/summary_VN.tex}
+\input{resume/skills_VN.tex}
+\input{resume/education_VN.tex}
+\input{resume/experience_VN.tex}
+\input{resume/whyme_VN.tex}
 % \input{resume/honors.tex}
 % \input{resume/certificates.tex}
 % \input{resume/presentation.tex}
