--- a/resume/education_VN.tex
+++ b/resume/education_VN.tex
@@ -1,23 +1,23 @@
 %-------------------------------------------------------------------------------
-%	SECTION TITLE
+%	TIÊU ĐỀ MỤC
 %-------------------------------------------------------------------------------
-\cvsection{Education}
+\cvsection{Học vấn}
 
 
 %-------------------------------------------------------------------------------
-%	CONTENT
+%	NỘI DUNG
 %-------------------------------------------------------------------------------
 \begin{cventries}
 
 %---------------------------------------------------------
   \cventry
-    {B.S. in Software Engineering} % Degree
-    {HaUI (Hanoi University of Industry)} % Institution
-    {Bac Tu Liem, Hanoi} % Location
-    {Compeleted in 2020} % Date(s)
+    {Kỹ sư Phần mềm} % Bằng cấp
+    {Đại học Công nghiệp Hà Nội (HaUI)} % Tên trường
+    {Bắc Từ Liêm, Hà Nội} % Địa điểm
+    {Tốt nghiệp năm 2020} % Thời gian
     {
-      % \begin{cvitems} % Description(s) bullet points
-      %   \item {Got a Chun Shin-Il Scholarship which is given to promising students in CSE Dept.}
+      % \begin{cvitems} % Mô tả (nếu cần)
+      %   \item {Nhận học bổng Chun Shin-Il dành cho sinh viên tiềm năng ngành Khoa học máy tính.}
       % \end{cvitems}
     }
 
