--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -22,7 +22,7 @@
         \item {Designed and optimized databases (MySQL, PostgreSQL, MongoDB) to meet project needs, ensuring performance and security.}
         \item {Led a team of 4-6 developers, assigned tasks, reviewed code, and conducted unit testing to maintain high-quality deliverables.}
         \item {Developed RESTful APIs and integrated with frontend, supported testers in bug fixing, and managed code merges.}
-        \item {Prepared detailed release documentation, deployed applications using Docker and CI/CD pipelines (GitLab, Jenkins), and resolved client feedback post-launch.}
+        \item {Prepared detailed release documentation, deployed applications using Docker and CI/CD pipelines, and resolved client feedback post-launch.}
         \item {Mentored new team members, designed skill development roadmaps, and facilitated their integration into the team.}
       \end{cvitems}
     }
