--- a/resume/experience_VN.tex
+++ b/resume/experience_VN.tex
@@ -1,44 +1,43 @@
 %-------------------------------------------------------------------------------
-%	SECTION TITLE
+%	TIÊU ĐỀ MỤC
 %-------------------------------------------------------------------------------
-\cvsection{Work Experience}
+\cvsection{Kinh nghiệm làm việc}
 
 
 %-------------------------------------------------------------------------------
-%	CONTENT
+%	NỘI DUNG
 %-------------------------------------------------------------------------------
 \begin{cventries}
 
 %---------------------------------------------------------
   \cventry
-    {Backend Developer / Team Lead} % Job title
-    {Rikkeisoft Co., Ltd} % Organization
-    {Me Tri, Hanoi} % Location
-    {Apr. 2022 - Present} % Date(s)
+    {Lập trình viên Backend / Team Lead} % Chức danh
+    {Công ty TNHH Rikkeisoft} % Tên công ty
+    {Mễ Trì, Hà Nội} % Địa điểm
+    {Tháng 4/2022 - Hiện tại} % Thời gian
     {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Everything that matters.}
-        \item {Collaborated with BAs to analyze requirements, estimated timelines, and planned development phases.}
-        \item {Designed and optimized databases (MySQL, PostgreSQL, MongoDB) to meet project needs, ensuring performance and security.}
-        \item {Led a team of 4-6 developers, assigned tasks, reviewed code, and conducted unit testing to maintain high-quality deliverables.}
-        \item {Developed RESTful APIs and integrated with frontend, supported testers in bug fixing, and managed code merges.}
-        \item {Prepared detailed release documentation, deployed applications using Docker and CI/CD pipelines (GitLab, Jenkins), and resolved client feedback post-launch.}
-        \item {Mentored new team members, designed skill development roadmaps, and facilitated their integration into the team.}
+      \begin{cvitems} % Mô tả công việc / nhiệm vụ
+        \item {Phối hợp với BA để phân tích yêu cầu, ước lượng thời gian và lập kế hoạch các giai đoạn phát triển.}
+        \item {Thiết kế và tối ưu cơ sở dữ liệu (MySQL, PostgreSQL, MongoDB) nhằm đảm bảo hiệu năng và bảo mật.}
+        \item {Dẫn dắt nhóm 4-6 lập trình viên, phân công công việc, review code và thực hiện unit test để đảm bảo chất lượng.}
+        \item {Phát triển API RESTful, tích hợp với frontend, hỗ trợ tester sửa lỗi và quản lý quá trình review/merge code.}
+        \item {Soạn thảo tài liệu release chi tiết, triển khai ứng dụng bằng Docker và CI/CD pipeline, xử lý phản hồi từ khách hàng sau khi bàn giao.}
+        \item {Hướng dẫn thành viên mới, xây dựng lộ trình phát triển kỹ năng và hỗ trợ hòa nhập với nhóm.}
       \end{cvitems}
     }
 
 %---------------------------------------------------------
   \cventry
-    {Magento Developer} % Job title
-    {Mageplaza Co., Ltd} % Organization
-    {Ha Dong, Hanoi} % Location
-    {Jan. 2021 - Mar. 2022} % Date(s)
+    {Lập trình viên Magento} % Chức danh
+    {Công ty TNHH Mageplaza} % Tên công ty
+    {Hà Đông, Hà Nội} % Địa điểm
+    {Tháng 1/2021 - Tháng 3/2022} % Thời gian
     {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Assisted in developing and customizing Magento 2 themes and modules.}
-        \item {Fixed bugs, optimized website performance, and improved security.}
-        \item {Integrated payment gateways and third-party APIs.}
-        \item {Collaborated with frontend and backend teams on eCommerce projects.}
+      \begin{cvitems} % Mô tả công việc / nhiệm vụ
+        \item {Tham gia phát triển và tuỳ biến giao diện, module Magento 2.}
+        \item {Sửa lỗi, tối ưu hiệu năng website và tăng cường bảo mật hệ thống.}
+        \item {Tích hợp cổng thanh toán và các API từ bên thứ ba.}
+        \item {Phối hợp với nhóm frontend và backend trong các dự án thương mại điện tử.}
       \end{cvitems}
     }
 
