--- a/resume/skills.tex
+++ b/resume/skills.tex
@@ -12,32 +12,37 @@
 %---------------------------------------------------------
   \cvskill
     {Programming} % Category
-    {Proficient in Node.js, PHP, and basic Java.} % Skills
+    {Proficient in Node.js, PHP, and basic knowledge of Java.} % Skills
 
 %---------------------------------------------------------
   \cvskill
     {Databases} % Category
-    {Skilled in MySQL, PostgreSQL, and MongoDB.} % Skills
+    {Experienced with MySQL, PostgreSQL, and MongoDB.} % Skills
 
 %---------------------------------------------------------
   \cvskill
-    {Backend/API} % Category
-    {Experienced with RESTful APIs, Express.js, Serverless Lambda AWS, and Laravel.} % Skills
+    {Frameworks} % Category
+    {Expertise in Express.js, Laravel, Magento, and Serverless Lambda (AWS).} % Skills
 
 %---------------------------------------------------------
   \cvskill
-    {Cloud/DevOps} % Category
-    {Knowledge of Git, Docker, and CI/CD (GitLab, Jenkins).} % Skills
+    {CloudDevOps} % Category
+    {Hands-on with Git, Docker, CI/CD pipelines and basic knowledge of AWS} % Skills
 
 %---------------------------------------------------------
   \cvskill
-    {Security/Performance} % Category
-    {Expertise in JWT/OAuth, endpoint security, query optimization, Redis caching, and unit/integration testing.} % Skills
+    {Security} % Category
+    {Proficient in JWT/OAuth for secure authentication and endpoint protection.} % Skills
 
 %---------------------------------------------------------
   \cvskill
-    {Leadership} % Category
-    {Strong in team management, mentorship, and collaboration.} % Skills
+    {Performance} % Category
+    { Skilled in optimization and caching techniques (e.g., Redis).} % Skills
+
+%---------------------------------------------------------
+  \cvskill
+    {Other} % Category
+    {Strong in team management, mentorship, and collaboration. Basic reading comprehension of English} % Skills
 
 %---------------------------------------------------------
 \end{cvskills}
