--- a/resume/skills_VN.tex
+++ b/resume/skills_VN.tex
@@ -11,33 +11,43 @@
 
 %---------------------------------------------------------
   \cvskill
-    {Programming} % Category
-    {Proficient in Node.js, PHP, and basic Java.} % Skills
+    {Ngôn ngữ} % Category
+    {Thành thạo JS, PHP, and có hiểu biết nền tảng về Java.} % Skills
 
 %---------------------------------------------------------
   \cvskill
-    {Databases} % Category
-    {Skilled in MySQL, PostgreSQL, and MongoDB.} % Skills
+    {Cơ sở dữ liệu} % Category
+    {Có kinh nghiệm với MySQL, PostgreSQL và MongoDB.} % Skills
 
 %---------------------------------------------------------
   \cvskill
-    {Backend/API} % Category
-    {Experienced with RESTful APIs, Express.js, Serverless Lambda AWS, and Laravel.} % Skills
+    {Frameworks} % Category
+    {Có kinh nghiệm với Express.js, Laravel, Magento và Serverless Lambda (AWS).} % Skills
 
 %---------------------------------------------------------
   \cvskill
-    {Cloud/DevOps} % Category
-    {Knowledge of Git, Docker, and CI/CD (GitLab, Jenkins).} % Skills
+    {APIs} % Category
+    {Kinh nghiệm thiết kế và duy trì RESTful API.} % Skills
 
 %---------------------------------------------------------
   \cvskill
-    {Security/Performance} % Category
-    {Expertise in JWT/OAuth, endpoint security, query optimization, Redis caching, and unit/integration testing.} % Skills
+    {DevOps} % Category
+    {Sử dụng thành thạo Git, Docker và quy trình CI/CD.} % Skills
 
 %---------------------------------------------------------
   \cvskill
-    {Leadership} % Category
-    {Strong in team management, mentorship, and collaboration.} % Skills
+    {Bảo mật} % Category
+    {Nắm vững JWT/OAuth cho xác thực và bảo vệ endpoint.} % Skills
+
+%---------------------------------------------------------
+  \cvskill
+    {Hiệu năng} % Category
+    {Tối ưu hệ thống và sử dụng kỹ thuật caching (ví dụ: Redis).} % Skills
+
+%---------------------------------------------------------
+  \cvskill
+    {Khác} % Category
+    {Có kỹ năng quản lý nhóm, hướng dẫn và phối hợp làm việc hiệu quả.} % Skills
 
 %---------------------------------------------------------
 \end{cvskills}
