--- a/resume/summary.tex
+++ b/resume/summary.tex
@@ -8,9 +8,9 @@
 %	CONTENT
 %-------------------------------------------------------------------------------
 \begin{cvparagraph}
-
-%---------------------------------------------------------
-Backend Developer with over 3 years of experience, proficient in Node.js, PHP, Java, building RESTful APIs, and managing databases (MySQL, PostgreSQL, MongoDB), with expertise in Docker and CI/CD deployment.
-
-Experienced in leading teams, mentoring junior developers, and coordinating projects end-to-end, always focused on optimizing performance and delivering high-quality solutions.
+    \quad
+    %---------------------------------------------------------
+    Backend Developer with 4 years of experience, including a proven track record as a Team Lead managing full project lifecycles. Proficient in Node.js and PHP, with a solid foundation in Java. Experienced in working with various database systems (MySQL, PostgreSQL, MongoDB), implementing CI/CD pipelines, using Docker, and applying performance optimization and security best practices. Strong in team collaboration, clear communication, and systems thinking to ensure project quality and on-time delivery.
+    \vspace{0.5em} % Thêm khoảng cách dọc giữa các dòng
+    \newline \hspace*{1em} Currently aiming to grow into higher-level technical management roles, while continuously exploring new technologies to improve productivity and system quality. Actively pursuing AWS Solution Architect certification to strengthen expertise in cloud architecture.
 \end{cvparagraph}
