--- a/resume/summary_VN.tex
+++ b/resume/summary_VN.tex
@@ -8,9 +8,9 @@
 %	CONTENT
 %-------------------------------------------------------------------------------
 \begin{cvparagraph}
-
-%---------------------------------------------------------
-Backend Developer with over 3 years of experience, proficient in Node.js, PHP, Java, building RESTful APIs, and managing databases (MySQL, PostgreSQL, MongoDB), with expertise in Docker and CI/CD deployment.
-
-Experienced in leading teams, mentoring junior developers, and coordinating projects end-to-end, always focused on optimizing performance and delivering high-quality solutions.
+    \quad
+    %---------------------------------------------------------
+    Lập trình viên Backend với 4 năm kinh nghiệm, từng đảm nhiệm vai trò Team Lead và trực tiếp tham gia quản lý vòng đời dự án. Thành thạo Node.js, PHP, có hiểu biết nền tảng về Java. Có kinh nghiệm làm việc với nhiều hệ quản trị cơ sở dữ liệu (MySQL, PostgreSQL, MongoDB), triển khai CI/CD, sử dụng Docker, và ứng dụng tốt các kỹ thuật tối ưu hiệu năng, bảo mật hệ thống. Kỹ năng phối hợp nhóm, giao tiếp rõ ràng và tư duy hệ thống giúp đảm bảo tiến độ và chất lượng dự án.
+    \vspace{0.5em} % Thêm khoảng cách dọc giữa các dòng
+    \newline \hspace*{1em} Định hướng phát triển lên vai trò quản lý kỹ thuật cao hơn, đồng thời liên tục học hỏi công nghệ mới để nâng cao năng suất và chất lượng hệ thống. Hiện đang tập trung lấy chứng chỉ AWS Solution Architect để mở rộng năng lực về kiến trúc hệ thống trên nền tảng đám mây.
 \end{cvparagraph}
