--- a/resume/whyme_VN.tex
+++ b/resume/whyme_VN.tex
@@ -1,18 +1,16 @@
 %-------------------------------------------------------------------------------
-%	SECTION TITLE
+%	TIÊU ĐỀ MỤC
 %-------------------------------------------------------------------------------
 \cvsection{Why me?}
 
 
 %-------------------------------------------------------------------------------
-%	CONTENT
+%	NỘI DUNG
 %-------------------------------------------------------------------------------
 \begin{cvbullets}
 %---------------------------------------------------------
-  \item {Thrive on tackling complex problems with creative, scalable solutions.}
-  \item {Optimize workflows and systems to boost efficiency and reliability.}
-  \item {Enforce rigorous processes to ensure precision and seamless delivery.}
-  \item {Proactively identify and resolve bottlenecks with a keen eye for detail.}
-  \item {Collaborate effectively with teams to align goals and achieve success.}
-  \item {Believe happiness stems from a well-optimized life—in code, processes, and results.}
+  \item {\textbf{Kinh nghiệm vững vàng}: 4 năm làm lập trình viên Backend, có kinh nghiệm quản lý và dẫn dắt dự án với vai trò Trưởng nhóm.}
+  \item {\textbf{Tư duy hệ thống}: Thành thạo thiết kế hệ thống và tối ưu hiệu suất làm việc của nhóm.}
+  \item {\textbf{Chủ động giải quyết vấn đề}: Luôn phát hiện và xử lý sớm các sự cố, đảm bảo hệ thống ổn định.}
+  \item {\textbf{Tư duy phát triển}: Liên tục học hỏi công nghệ mới, định hướng phát triển lên các vị trí quản lý kỹ thuật.}
 \end{cvbullets}
