--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -17,7 +17,7 @@
     {Apr. 2022 - Present} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Everything that matters.}
+        \item {Contributed to projects of various scales, incl. e-commerce systems, scheduling tools, and Forex platforms...}
         \item {Collaborated with BAs to analyze requirements, estimated timelines, and planned development phases.}
         \item {Designed and optimized databases (MySQL, PostgreSQL, MongoDB) to meet project needs, ensuring performance and security.}
         \item {Led a team of 4-6 developers, assigned tasks, reviewed code, and conducted unit testing to maintain high-quality deliverables.}
