--- a/resume/experience_VN.tex
+++ b/resume/experience_VN.tex
@@ -17,6 +17,7 @@
     {Tháng 4/2022 - Hiện tại} % Thời gian
     {
       \begin{cvitems} % Mô tả công việc / nhiệm vụ
+        \item {Tham gia nhiều dự án đa dạng quy mô: thương mại điện tử, quản lý lập lịch công việc, nền tảng giao dịch Forex,...}
         \item {Phối hợp với BA để phân tích yêu cầu, ước lượng thời gian và lập kế hoạch các giai đoạn phát triển.}
         \item {Thiết kế và tối ưu cơ sở dữ liệu (MySQL, PostgreSQL, MongoDB) nhằm đảm bảo hiệu năng và bảo mật.}
         \item {Dẫn dắt nhóm 4-6 lập trình viên, phân công công việc, review code và thực hiện unit test để đảm bảo chất lượng.}
