--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -10,6 +10,40 @@
 \begin{cventries}
 
 %---------------------------------------------------------
+  % \cventry
+  %   {Backend Developer / Team Lead} % Job title
+  %   {Rikkeisoft Co., Ltd} % Organization
+  %   {Me Tri, Hanoi} % Location
+  %   {Apr. 2022 - Present} % Date(s)
+  %   {
+  %     \begin{cvitems} % Description(s) of tasks/responsibilities
+  %       \item {Led backend development for mid-to-large scale platforms including e-commerce, scheduling tools, and a Forex trading system.}
+  %       \item {Collaborated with BAs to analyze requirements, estimate effort, and define development phases aligned with business goals.}
+  %       \item {Designed and optimized MySQL schemas and queries, reducing average query latency by ~30\% and improving overall database efficiency.}
+  %       \item {Managed a team of 4–6 developers: delegated tasks, reviewed PRs, maintained code quality, and ensured on-time delivery in Agile sprints.}
+  %       \item {Built and maintained RESTful APIs; integrated with frontend teams and supported QA in testing and rapid bug resolution.}
+  %       \item {Prepared detailed release documentation and deployment checklists to ensure safe, repeatable releases; deployed via Docker and CI/CD pipelines, and followed up with client feedback resolution.}
+  %       \item {Mentored interns and fresher developers, designed onboarding/training roadmaps, and supported long-term team skill development.}
+  %     \end{cvitems}
+  %   }
+
+  % \cventry
+  %   {Backend Developer}
+  %   {Rikkeisoft Co., Ltd}
+  %   {Hanoi, Vietnam}
+  %   {Apr. 2022 – Dec. 2023}
+  %   {
+  %     \begin{cvitems}
+  %       \item {\textbf{Key technologies:} Laravel, PostgreSQL, Redis, Docker, CI/CD, VNPAY, GHN}
+  %       \item Developed and maintained 40+ Laravel REST APIs for catalog, cart, checkout, and order modules.
+  %       \item Designed and normalized PostgreSQL schemas; improved query performance with indexes and materialized views.
+  %       \item Implemented Redis caching to reduce average response latency by 35\%.
+  %       \item Integrated local payment gateways and shipping APIs via secure REST endpoints.
+  %       \item Used Laravel queues and Horizon for background jobs (email, order processing).
+  %       \item Dockerized services and configured CI/CD pipelines for staging/production.
+  %     \end{cvitems}
+  %   }
+
   \cventry
     {Backend Developer / Team Lead} % Job title
     {Rikkeisoft Co., Ltd} % Organization
@@ -17,13 +51,37 @@
     {Apr. 2022 - Present} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Contributed to projects of various scales, incl. e-commerce systems, scheduling tools, and Forex platforms...}
-        \item {Collaborated with BAs to analyze requirements, estimated timelines, and planned development phases.}
-        \item {Designed and optimized databases (MySQL, PostgreSQL, MongoDB) to meet project needs, ensuring performance and security.}
-        \item {Led a team of 4-6 developers, assigned tasks, reviewed code, and conducted unit testing to maintain high-quality deliverables.}
-        \item {Developed RESTful APIs and integrated with frontend, supported testers in bug fixing, and managed code merges.}
-        \item {Prepared detailed release documentation, deployed applications using Docker and CI/CD pipelines, and resolved client feedback post-launch.}
-        \item {Mentored new team members, designed skill development roadmaps, and facilitated their integration into the team.}
+        \item {Participated in backend development of multiple systems, including a Forex trading platform (as team lead), an e-commerce site, and an internal scheduling tool. Applied various tech stacks and design approaches.}
+        \vspace{0.5em}
+        % Project item
+        \item[] \textbf{Forex Trading Platform} — Financial system supporting thousands of concurrent users
+        \vspace{0.15em}
+        \item[] \textbf{Tech stack:} Serverless (Node.js on AWS Lambda), MySQL, Docker, AWS Cloud services (SQS, SNS, API Gateway)
+        \vspace{0.25em}
+        \begin{itemize}[label=•,itemsep=0.15em]
+          \item {Led backend development for the core operations system of a large-scale Forex platform.}
+          \item {Worked with BAs on requirement analysis, estimation, and phased planning.}
+          \item {Designed and optimized MySQL schemas; reduced query latency by ~30\%.}
+          \item {Managed 4–6 developers; assigned tasks, reviewed PRs, and ensured sprint delivery.}
+          \item {Built REST APIs, collaborated with frontend, QA, and handled bug fixes.}
+          \item {Documented releases, created deployment checklists, and managed CI/CD with Docker.}
+          \item {Mentored juniors; created onboarding guides and skill-building plans.}
+        \end{itemize}
+        \vspace{0.5em}
+        % Project item
+        \item[] \textbf{E-commerce Platform} — Online storefront with full shopping and payment flow
+        \vspace{0.15em}
+        \item[] \textbf{Tech stack:} PHP (Laravel), PostgreSQL, Redis, Docker, VNPAY, MoMo
+        \vspace{0.25em}
+        \begin{itemize}[label=•,itemsep=0.15em]
+          \item {Developed RESTful APIs for catalog, cart, checkout, and order management}
+          \item {Designed PostgreSQL schemas and leveraged materialized views for reporting}
+          \item {Implemented Redis caching for product details and category listings}
+          \item {Integrated payment gateways and shipping APIs via secure REST endpoints}
+          \item {Used Laravel queues and Horizon for background jobs (email, order processing)}
+          \item {Dockerized services and configured CI/CD pipelines for staging/production}
+        \end{itemize}
+        \vspace{0.5em}
       \end{cvitems}
     }
 
