--- a/resume/experience_VN.tex
+++ b/resume/experience_VN.tex
@@ -9,23 +9,54 @@
 %-------------------------------------------------------------------------------
 \begin{cventries}
 
-%---------------------------------------------------------
-  \cventry
-    {Lập trình viên Backend / Team Lead} % Chức danh
-    {Công ty TNHH Rikkeisoft} % Tên công ty
-    {Mễ Trì, Hà Nội} % Địa điểm
-    {Tháng 4/2022 - Hiện tại} % Thời gian
-    {
-      \begin{cvitems} % Mô tả công việc / nhiệm vụ
-        \item {Tham gia nhiều dự án đa dạng quy mô: thương mại điện tử, quản lý lập lịch công việc, nền tảng giao dịch Forex,...}
-        \item {Phối hợp với BA để phân tích yêu cầu, ước lượng thời gian và lập kế hoạch các giai đoạn phát triển.}
-        \item {Thiết kế và tối ưu cơ sở dữ liệu (MySQL, PostgreSQL, MongoDB) nhằm đảm bảo hiệu năng và bảo mật.}
-        \item {Dẫn dắt nhóm 4-6 lập trình viên, phân công công việc, review code và thực hiện unit test để đảm bảo chất lượng.}
-        \item {Phát triển API RESTful, tích hợp với frontend, hỗ trợ tester sửa lỗi và quản lý quá trình review/merge code.}
-        \item {Soạn thảo tài liệu release chi tiết, triển khai ứng dụng bằng Docker và CI/CD pipeline, xử lý phản hồi từ khách hàng sau khi bàn giao.}
-        \item {Hướng dẫn thành viên mới, xây dựng lộ trình phát triển kỹ năng và hỗ trợ hòa nhập với nhóm.}
-      \end{cvitems}
-    }
+% %---------------------------------------------------------
+%   \cventry
+%     {Lập trình viên Backend / Team Lead} % Chức danh
+%     {Công ty TNHH Rikkeisoft} % Tên công ty
+%     {Mễ Trì, Hà Nội} % Địa điểm
+%     {Tháng 4/2022 - Hiện tại} % Thời gian
+%     {
+%       \begin{cvitems} % Mô tả công việc / nhiệm vụ
+%         \item {Tham gia nhiều dự án đa dạng quy mô: thương mại điện tử, quản lý lập lịch công việc, nền tảng giao dịch Forex,...}
+%         \item {Phối hợp với BA để phân tích yêu cầu, ước lượng thời gian và lập kế hoạch các giai đoạn phát triển.}
+%         \item {Thiết kế và tối ưu cơ sở dữ liệu (MySQL, PostgreSQL, MongoDB) nhằm đảm bảo hiệu năng và bảo mật.}
+%         \item {Dẫn dắt nhóm 4-6 lập trình viên, phân công công việc, review code và thực hiện unit test để đảm bảo chất lượng.}
+%         \item {Phát triển API RESTful, tích hợp với frontend, hỗ trợ tester sửa lỗi và quản lý quá trình review/merge code.}
+%         \item {Soạn thảo tài liệu release chi tiết, triển khai ứng dụng bằng Docker và CI/CD pipeline, xử lý phản hồi từ khách hàng sau khi bàn giao.}
+%         \item {Hướng dẫn thành viên mới, xây dựng lộ trình phát triển kỹ năng và hỗ trợ hòa nhập với nhóm.}
+%       \end{cvitems}
+%     }
+
+\cvsection{Kinh nghiệm làm việc}
+
+% Phần entry chính về công ty
+\cventry
+  {Backend Developer / Team Lead}
+  {Rikkeisoft}
+  {Mễ Trì, Hà Nội}
+  {Jan. 2020 -- Hiện tại}
+  {
+    \begin{cvitems}
+      \item {Tham gia và dẫn dắt nhiều dự án lớn, chủ yếu cho khách hàng Nhật Bản.}
+    \end{cvitems}
+  }
+
+% Các dự án con
+\cvproject{[1] Nền tảng giao dịch Forex (2021–nay)}{
+  \item {Team lead backend, kiến trúc microservice với AWS Lambda, API Gateway.}
+  \item {Xử lý giao dịch tài chính thời gian thực, tối ưu MySQL cho dữ liệu lớn.}
+  \item {Quản lý nhóm 4–6 người, phân công công việc, review code, mentoring.}
+}
+
+\cvproject{[2] Hệ thống đăng ký môn học (2020)}{
+  \item {Phát triển API backend với Laravel, xử lý logic đăng ký học phức tạp.}
+  \item {Tối ưu truy vấn PostgreSQL và xử lý phân quyền.}
+}
+
+\cvproject{[3] TMĐT vật liệu xây dựng (2020)}{
+  \item {Phát triển frontend bằng Laravel Blade + jQuery, tối ưu SEO.}
+  \item {Tích hợp AJAX giỏ hàng, bộ lọc, nâng cao UX.}
+}
 
 %---------------------------------------------------------
   \cventry
