--- a/resume/skills.tex
+++ b/resume/skills.tex
@@ -12,7 +12,7 @@
 %---------------------------------------------------------
   \cvskill
     {Programming} % Category
-    {Proficient in Node.js, PHP, and basic knowledge of Java.} % Skills
+    {Proficient in JavaScript, PHP, and Java.} % Skills
 
 %---------------------------------------------------------
   \cvskill
