--- a/NguyenVanTuong_CV_VN.tex
+++ b/NguyenVanTuong_CV_VN.tex
@@ -97,11 +97,11 @@
 %	CV/RESUME CONTENT
 %	Each section is imported separately, open each file in turn to modify content
 %-------------------------------------------------------------------------------
-\input{resume/summary_VN.tex}
-\input{resume/skills_VN.tex}
-\input{resume/education_VN.tex}
-\input{resume/experience_VN.tex}
-\input{resume/whyme_VN.tex}
+\input{resume/VN/summary.tex}
+\input{resume/VN/skills.tex}
+\input{resume/VN/education.tex}
+\input{resume/VN/experience.tex}
+\input{resume/VN/whyme.tex}
 % \input{resume/honors.tex}
 % \input{resume/certificates.tex}
 % \input{resume/presentation.tex}
