--- a/NguyenVanTuong_CV_EN.tex
+++ b/NguyenVanTuong_CV_EN.tex
@@ -101,6 +101,7 @@
 \input{resume/skills.tex}
 \input{resume/education.tex}
 \input{resume/experience.tex}
+\input{resume/projects.tex}
 \input{resume/whyme.tex}
 % \input{resume/honors.tex}
 % \input{resume/certificates.tex}
