--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -93,10 +93,11 @@
     {Jan. 2021 - Mar. 2022} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Assisted in developing and customizing Magento 2 themes and modules.}
-        \item {Fixed bugs, optimized website performance, and improved security.}
-        \item {Integrated payment gateways and third-party APIs.}
-        \item {Collaborated with frontend and backend teams on eCommerce projects.}
+        \item {Developed and maintained Magento 2 extensions to enhance e-commerce websites, supporting 1000+ global merchants.}
+        \item {Built modules such as Product Feed, Reward Points, SEO Toolkit, and Extra Fee – focused on scalability, compatibility, and performance.}
+        \item {Customized features based on client requests and provided technical support for installation, bug fixing, and integration.}
+        \item {Wrote clean, reusable PHP code following Magento development standards; optimized SQL queries for high-traffic stores.}
+        \item {Collaborated with frontend, QA, and support teams to deliver high-quality releases and reduce issue turnaround time.}
       \end{cvitems}
     }
 
